 - GBA Memory: Fix writing to OBJ memory in modes 3 and 5
 - GBA: Fix RTC on non-standard sized ROMs (fixes mgba.io/i/1400)
 - GBA Memory: Prevent writing to mirrored BG VRAM (fixes mgba.io/i/743)
 - GBA Video: Fix sprite mosaic clamping (fixes mgba.io/i/1008)
 - GB: Fix HALT when IE and IF unused bits are set (fixes mgba.io/i/1349)
Other fixes:
 - Qt: More app metadata fixes
 - Qt: Fix load recent from archive (fixes mgba.io/i/1325)
 - LR35902: Fix disassembly of several CB-prefix instructions
 - Qt: Fix overrides getting discarded (fixes mgba.io/i/1354)
 - Qt: Fix saved scale not getting set on resize (fixes mgba.io/i/1074)
 - CMake: Fix .deb imagemagick dependencies
 - Qt: Fix crash in sprite viewer magnification (fixes mgba.io/i/1362)
 - 3DS: Ensure core 2 can be used for threaded renderer (fixes mgba.io/i/1371)
 - GB Core: Fix toggling WIN and OBJ being swapped
 - All: Fix several memory leaks
 - LR35902: Fix trailing whitespace in disassembly
 - Qt: Fix adjusting magnification in tile viewer when not fitting to window
 - FFmpeg: Improve initialization reliability and cleanup
 - Wii: Fix aspect ratio (fixes mgba.io/i/500)
 - Qt: Fix some Qt display driver race conditions
 - FFmpeg: Fix audio conversion producing gaps
 - Core: Improved lockstep driver reliability (Le Hoang Quyen)
 - GBA: Fix skipping BIOS on irregularly sized ROMs
 - Qt: Fix bounded fast forward with Qt Multimedia
Misc:
 - GBA Savedata: EEPROM performance fixes
 - GBA Savedata: Automatically map 1Mbit Flash files as 1Mbit Flash
 - GB Memory: Support running from blocked memory
 - Qt: Don't unload ROM immediately if it crashes
 - Debugger: Add breakpoint and watchpoint listing
 - Qt: Add missing HEVC NVENC option (fixes mgba.io/i/1323)
 - LR35902: Support PC-relative opcode decoding
 - Qt: Improve camera initialization
 - Qt: Support switching webcams
 - Core: Add keysRead callback
 - Vita: Improved frame drawing speed
 - Qt: Cap window size on start to monitor size