@@ -48,6 +48,31 @@
 		SPRITE_DRAW_PIXEL_ ## DEPTH ## _ ## TYPE(localX); \
 	}
 
+#define SPRITE_TRANSFORMED_MOSAIC_LOOP(DEPTH, TYPE) \
+	unsigned tileData; \
+	unsigned widthMask = ~(width - 1); \
+	unsigned heightMask = ~(height - 1); \
+	int localX = xAccum >> 8; \
+	int localY = yAccum >> 8; \
+	for (; outX < condition; ++outX, ++inX) { \
+		renderer->spriteCyclesRemaining -= 2; \
+		xAccum += mat.a; \
+		yAccum += mat.c; \
+		\
+		if (outX % mosaicH == 0) { \
+			localX = xAccum >> 8; \
+			localY = yAccum >> 8; \
+		} \
+		\
+		if (localX & widthMask || localY & heightMask) { \
+			continue; \
+		} \
+		\
+		SPRITE_YBASE_ ## DEPTH(localY); \
+		SPRITE_XBASE_ ## DEPTH(localX); \
+		SPRITE_DRAW_PIXEL_ ## DEPTH ## _ ## TYPE(localX); \
+	}
+
 #define SPRITE_XBASE_16(localX) unsigned xBase = (localX & ~0x7) * 4 + ((localX >> 1) & 2);
 #define SPRITE_YBASE_16(localY) unsigned yBase = (localY & ~0x7) * stride + (localY & 0x7) * 4;
 
@@ -173,6 +198,13 @@ int GBAVideoSoftwareRendererPreprocessSprite(struct GBAVideoSoftwareRenderer* re
 		if (end < condition) {
 			condition = end;
 		}
+		int mosaicH = 1;
+		if (GBAObjAttributesAIsMosaic(sprite->a)) {
+			mosaicH = GBAMosaicControlGetObjH(renderer->mosaic) + 1;
+			if (condition % mosaicH) {
+				condition += mosaicH - (condition % mosaicH);
+			}
+		}
 
 		int xAccum = mat.a * (inX - 1 - (totalWidth >> 1)) + mat.b * (inY - (totalHeight >> 1)) + (width << 7);
 		int yAccum = mat.c * (inX - 1 - (totalWidth >> 1)) + mat.d * (inY - (totalHeight >> 1)) + (height << 7);
@@ -223,6 +255,13 @@ int GBAVideoSoftwareRendererPreprocessSprite(struct GBAVideoSoftwareRenderer* re
 			palette = &palette[GBAObjAttributesCGetPalette(sprite->c) << 4];
 			if (flags & FLAG_OBJWIN) {
 				SPRITE_TRANSFORMED_LOOP(16, OBJWIN);
+			} else if (mosaicH > 1) {
+				if (objwinSlowPath) {
+					objwinPalette = &objwinPalette[GBAObjAttributesCGetPalette(sprite->c) << 4];
+					SPRITE_TRANSFORMED_MOSAIC_LOOP(16, NORMAL_OBJWIN);
+				} else {
+					SPRITE_TRANSFORMED_MOSAIC_LOOP(16, NORMAL);
+				}
 			} else if (objwinSlowPath) {
 				objwinPalette = &objwinPalette[GBAObjAttributesCGetPalette(sprite->c) << 4];
 				SPRITE_TRANSFORMED_LOOP(16, NORMAL_OBJWIN);
@@ -232,6 +271,12 @@ int GBAVideoSoftwareRendererPreprocessSprite(struct GBAVideoSoftwareRenderer* re
 		} else {
 			if (flags & FLAG_OBJWIN) {
 				SPRITE_TRANSFORMED_LOOP(256, OBJWIN);
+			} else if (mosaicH > 1) {
+				if (objwinSlowPath) {
+					SPRITE_TRANSFORMED_MOSAIC_LOOP(256, NORMAL_OBJWIN);
+				} else {
+					SPRITE_TRANSFORMED_MOSAIC_LOOP(256, NORMAL);
+				}
 			} else if (objwinSlowPath) {
 				SPRITE_TRANSFORMED_LOOP(256, NORMAL_OBJWIN);
 			} else {
